@@ -33,50 +33,16 @@ a.live_tree_branch_expand_collapse_link {
 	color: #048;
 	border-style: none;
 	margin-right: 0.5ex;
-	width: 12px;
-	height: 12px;
+	width: 9px;
+	height: 9px;
 }
-
-/* XXX get rid of animation */
 
 .live_tree_branch_expanded_icon {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -72px;
+	background: url(/images/live_tree_branch_expanded_icon.gif);	
 }
 
-.live_tree_branch_icon_frame_0 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px 0px;
-}
-
-.live_tree_branch_icon_frame_1 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -12px;
-}
-
-.live_tree_branch_icon_frame_2 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -24px;
-}
-
-.live_tree_branch_icon_frame_3 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -36px;
-}
-
-.live_tree_branch_icon_frame_4 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -48px;
-}
-
-.live_tree_branch_icon_frame_5 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -60px;
-}
-
-.live_tree_branch_icon_frame_6 {
-	background: url(/images/live_tree_branch_anim.gif);	
-	background-position: 0px -72px;
+.live_tree_branch_collapsed_icon {
+	background: url(/images/live_tree_branch_collapsed_icon.gif);	
 }
 
 .live_tree_leaf_icon {
